# Stack

./: CMakeLists.txt  Factorial_no_rec.txt  Factorial_rec.txt  Fib.txt  command.h  exception.h  main.cpp  parser.h  processor.h
Stack/: CMakeLists.txt  Stack.h
Stack/include/: Stack.h
Stack/scr/: Stack.cpp
command/: CMakeLists.txt
command/include/: command.h
my_stack/: CMakeLists.txt
my_stack/include/: mystack.h
my_stack/scr/: mystack.cpp
my_stack/test/: tests.cpp
parser/: CMakeLists.txt
parser/include/: parser.h
